--- a/object_detector/package.xml
+++ b/object_detector/package.xml
@@ -44,10 +44,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>common</build_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>common</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
