ready for the robot

--- a/color_detection/CMakeLists.txt
+++ b/color_detection/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   pcl_ros
-
+  vision_msgs
 )
 
 ## System dependencies are found with CMake's conventions
