add according dependencies to Cmakelists and package.cml

--- a/object_detector/CMakeLists.txt
+++ b/object_detector/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(object_detector)
 
 #set(PCL_DIR "/usr/share/pcl-1.7/")
-#set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Debug)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   cv_bridge
   common
   vision_msgs
+  visualization_msgs
 )
 find_package(PCL 1.7 REQUIRED)
 
